add controller and integration tests; refactor(api): improve teh DeviceController pagination and add PageDeviceMapper
